...
                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="movieName">
                                                    <bool key="isElement" value="NO"/>
                                                </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="KpZ-NZ-MRp"/>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="8Nf-3h-e8U">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="netfilx-64" id="aNg-cs-cCu"/>
                    </navigationItem>
...
                                        <rect key="frame" x="364" y="30.5" width="30" height="29"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="closeDetailBtn"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="PQJ-OF-e0H"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raU-b4-9Kd">
                                                        <rect key="frame" x="0.0" y="25" width="41" height="14.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="myList">
                                                            <bool key="isElement" value="NO"/>
                                                        </accessibility>
...
                                                </subviews>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="rateMovie"/>
                                                </userDefinedRuntimeAttributes>
                                            </stackView>
...
            <objects>
                <viewControllerPlaceholder storyboardName="MovieList" referencedIdentifier="MovieList" id="g1T-Qq-qd5" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="TVe-F2-W9w">
                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBarItem>
...
                                        <rect key="frame" x="40" y="287" width="334" height="40"/>
                                        <color key="backgroundColor" white="0.84812389960000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="username">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                        <color key="backgroundColor" white="0.84812389960000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" name="primary-color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="password">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <action selector="onTappedSignIn:" destination="XkW-Ml-j69" eventType="touchUpInside" id="W98-of-aGQ"/>
...
                        <viewLayoutGuide key="safeArea" id="iPD-PY-2Vq"/>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="AtJ-Jj-SWD"/>
                    <connections>
                        <outlet property="collectionViewRateList" destination="hHZ-eY-e7J" id="Tlg-9M-Mm3"/>
...
