...
        mPresenter.login(userName: self.tfUserName.text!, password: self.tfPassword.text!)
    }
    
    func showLoginError() {
        let err = "Please enter your info."
        let alert = UIAlertController(title: "Sign In", message: err, preferredStyle: .alert)
        let action = UIAlertAction(title: "OK", style: .default, handler: nil)
        alert.addAction(action)
        self.present(alert, animated: true, completion: nil)
    }
}

extension LoginViewController : LoginView {
...
    func hideLoading() {
        self.activityIndicator.stopAnimating()
    }
    
    func showErrorMessage(err: String) {
        debugPrint(err)
        let alert = UIAlertController(title: "Login Error", message: err, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    func navigateToProfileDetail() {
        self.navigateToProfile()
...
